Fix swagger production URL
